Deleted lift of scrollbar, fixed whidth scroll like in figma design

--- a/frontend/src/assets/scss/override.scss
+++ b/frontend/src/assets/scss/override.scss
@@ -130,12 +130,11 @@ p {
 }
 
 ::-webkit-scrollbar {
-  width: 20px;
+  width: 5px;
   border-radius: 100px;
 }
 
 ::-webkit-scrollbar-track {
-  background-color: #e4e4e4;
   border-radius: 100px;
 }
 
